--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,29 @@ body{
     overflow-x: hidden;  /*to remve horizontal scroll*/
     
 }
+.button{
+    background-color:rgb(250,66,112);
+    width: 100%;
+    height: 50;
+    margin-top: 2%;
+    margin-bottom: 5%;
+    border-radius: 25px;
+    border: none;
+    color: white;
+    font-size: 20;
+}
 
+        .button_blue{
+            background-color: rgb(48,107,232);
+            width: 100%;
+            height: 50;
+            margin-top: 2%;
+            margin-bottom: 5%;
+            border-radius: 25px;
+            border: none;
+            color: white;
+            font-size: 20;
+        }
 .index_nav{
     background-color:var(--gray) ;
     width: 100%;
@@ -216,4 +238,12 @@ footer{
 .test_sec{
     border: 3ch;
     border-color: black;
+}
+
+
+/*---------------- Financials ----------------*/ 
+.financials_add_outcome{
+    display: flex;
+    flex-direction: row;
+    background-color: black;
 }
