--- a/templates/financials.html
+++ b/templates/financials.html
@@ -8,8 +8,205 @@
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Tangerine">
     <title></title>
     <link rel="stylesheet" href="/static/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+    <style>
+        body{
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          font-size: large;
+
+        }
+        .financials_in::-webkit-scrollbar{
+          width: 1vw;
+        }
+
+        .financials_in::-webkit-scrollbar-thumb{
+          background-color: rgb(48,107,232);
+          border-radius: 25px;
+        }
+        .financials_in::-webkit-scrollbar-track{
+          background-color:rgba(92, 92, 92, 0.459);
+          border-radius: 25px;
+        }
+
+        .financials_out::-webkit-scrollbar{
+          width: 1vw;
+        }
+
+        .financials_out::-webkit-scrollbar-thumb{
+          background-color: rgb(48,107,232);
+          border-radius: 25px;
+        }
+        .financials_out::-webkit-scrollbar-track{
+          background-color: rgba(92, 92, 92, 0.459);
+          border-radius: 25px;
+        }
+        .admin_appointments::-webkit-scrollbar-button{
+          display: block;
+        }
+      .financials_add_outcome{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    margin: 1%;
+    border-radius: 25px;
+    height: 10vh;
+    padding: 1%;
+    transition: all .4s ease-in-out;
+}
+
+      .financials_add_outcome_form{
+        display: flex;
+          flex-direction: row;
+          height: 10vh;
+          justify-content: space-between;
+          align-items: center;
+          width: 60%;
+          transition: all .4s ease-in-out;
+      }
+
+      .financials_in_and_out{
+        display: flex;
+        flex-direction: row;
+      }
+      .financials_in{
+        background-color: white;
+        margin-left: 1%;
+        margin-right: 1%;
+
+        border-radius: 25px;
+        width: 50%;
+        overflow-y: scroll;
+        height: 60vh;
+        padding: 1%;
+    transition: all .4s ease-in-out;
+
+      }
+
+      .txt_btn{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      .financials_in_year{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      .financials_in_month{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      .financials_out{
+        background-color: white;
+        margin-left: 1%;
+        margin-right: 1%;
+        border-radius: 25px;
+        width: 50%;
+        overflow-y: scroll;
+        height: 60vh;
+        padding: 1%;
+    transition: all .4s ease-in-out;
+
+      }
+
+      .financials_revenue{
+        background-color: white;
+        margin: 1%;
+        border-radius: 25px;
+        height: 10vh;
+        padding: 1%;
+    transition: all .4s ease-in-out;
+
+      }
+
+
+
+      .financials_add_outcome:hover{
+        background-image: url('/static/website_hover_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+      }
+
+      .financials_in:hover{
+        background-image: url('/static/website_hover_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+      }
+
+      .financials_out:hover{
+        background-image: url('/static/website_hover_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+      }
+
+
+      .financials_revenue:hover{
+        background-image: url('/static/website_hover_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+      }
+
+
+      .button{
+    background-color:rgb(250,66,112);
+    width: 100%;
+    height: 70%;
+    margin: 1%;
+    border-radius: 25px;
+    border: none;
+    color: white;
+    font-size: 20;
+}
+
+.button_white{
+    background-color:white;
+    width: 100%;
+    height: 70%;
+    margin: 1%;
+    border-radius: 25px;
+    border: none;
+    color: black;
+    font-size: 20;
+}
+
+        .button_blue{
+            background-color: rgb(48,107,232);
+            width: 100%;
+            height: 70%;
+            margin: 1%;
+            border-radius: 25px;
+            border: none;
+            color: white;
+            font-size: 20;
+        }
+  </style>
 </head>
 <body>
   {% with messages = get_flashed_messages() %}
@@ -28,29 +225,151 @@
           </a>
         </div>
         <div>
-            <button><a href="/admin_panil">admin panil</a></button>
+            <a href="/admin_panil"><button class="button_blue" style="height: 8vh;">admin panil</button></a>
             
         </div>
     </nav>
-    <h2>add outcome</h2>
-    <form  method="post">
-      {{form.hidden_tag()}}
-      {{form.outcome_type.label}}
-      {{form.outcome_type}}
+    <div class="financials_add_outcome">
+      <h2>add outcome</h2>
+      <form  method="post" class="financials_add_outcome_form">
+        {{form.hidden_tag()}}
+        <h4 style="width: max;">type:</h4>
+        {{form.outcome_type(class='button_white')}}
 
-      {{form.amount.label}}
-      {{form.amount}}
+        <h4>Amount:</h4>
+        {{form.amount(class='button_white')}}
 
-      {{form.description.label}}
-      {{form.description}}
-      <input type="submit" value="Add outcome">
-    </form>
+        <h4>Desciption:</h4>
+        {{form.description(class='button_white')}}
+        <input type="submit" value="Add outcome" class="button_blue">
+      </form>
+    </div>
+    
+    <div class="financials_in_and_out">
+      <div class="financials_in">
+        <div class="txt_btn">
+        <h1>In</h1>
+        <a href=""><button class="button">Income history</button></a>
+        </div>
+        <div class="financials_in_month">
+          <div class="financials_in_month_txt">
+          
+          <h3>this month income</h3>
+          <b> total income = {{last_month_income}} </b>
+          <br>
+          examination = {{income_from_examination_this_month}}
+          <br>
+          endo = {{income_from_endo_this_month}}
+          <br>
+          operative = {{income_from_operative_this_month}}
+          <br>
+          crown = {{income_from_crown_this_month}}
+          <br>
+          bridge = {{income_from_bridge_this_month}}
+          <br>
+          denture = {{income_from_denture_this_month}}
+          <br>
+          scaling = {{income_from_scaling_this_month}}
+          <br>
+          surgery = {{income_from_other_this_month}}
+          <br>
+          implant = {{income_from_implant_this_month}}
+          <br>
+          other = {{income_from_other_this_month}}
+          </div>
+          <div >
+            <canvas id="month_income_chart" ></canvas>
+          </div>
+        </div>
+        <h3>this year income</h3>
+        <div class="financials_in_year">
+          
+          <div class="financials_in_year_txt">
+          
+          <b> total income =  {{total_income}} </b>
+          <br>
+          income from examination = {{income_from_examination}}
+          <br>
+          income from endo = {{income_from_endo}}
+          <br>
+          operative = {{income_from_operative}}
+          <br>
+          crown = {{income_from_crown}}
+          <br>
+          bridge = {{income_from_bridge}}
+          <br>
+          Denture = {{income_from_denture}}
+          <br>
+          scaling = {{income_from_scaling}}
+          <br>
+          srgery = {{income_from_surgery}}
+          <br>
+          implant = {{income_from_implant}}
+          <br>
+          other = {{income_from_other}}
+          </div>
+          <div >
+            <canvas id="year_income_chart" ></canvas>
+          </div>
+        </div>
+      </div>
 
-    <section >
+      <div class="financials_in">
+          <div class="txt_btn">
+          <h1>Out</h1>
+          <a href=""><button class="button">Outcome history</button></a>
+          </div>
+          <div class="financials_in_month">
+            <div class="financials_in_month_txt">
+              <h3>This month</h3>
+              salary: {{salary_outcome_this_month}}
+              <br>
+              rent: {{rent_outcome_this_month}}
+              <br>
+              materials: {{materials_outcome_this_month}}
+              <br>
+              lab: {{lab_outcome_this_month}}
+              <br>
+              other: {{other_outcome_this_month}}
+              <br>
+              Total: {{last_month_outcome}} 
+            </div>
+            <div>
+              <canvas id="month_outcome_chart"></canvas>
+            </div>
+          </div>
+          <h3>this year</h3>
+          <div class="financials_in_year">
+            <div class="financials_in_month_txt">
+
+              
+              salary: {{salary_outcome}}
+              <br>
+              rent: {{rent_outcome}}
+              <br>
+              materials: {{materials_outcome}}
+              <br>
+              lab: {{lab_outcome}}
+              <br>
+              other: {{other_outcome}}
+              <br>
+              Total: {{last_year_outcome}}
+            </div>
+            <div>
+              <canvas id="year_outcome_chart"></canvas>
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <div class="financials_revenue">
+      <h1> total revenue: {{total_revenue_this_year}} </h1>
+    </div>
+    <!--section >
         <h1>financial </h1>
 
         <h3>this year income</h3>
-        total income =  {{total_income}} 
+        <b> total income =  {{total_income}} </b>
         <br>
         income from examination = {{income_from_examination}}
         <br>
@@ -123,5 +442,159 @@
         Total: {{last_month_outcome}}
 
     </section>
+    total revenue: {{total_revenue_this_year}}
+    <div>
+      <canvas id="myChart" height="30" width="30"></canvas>
+    </div-->
+    <script>
+      const ctx = document.getElementById('month_income_chart');
+      const month_income_chart = new Chart(ctx, {
+          type: 'pie',
+          data: {
+              labels: ['examination', 'operative', 'crown', 'bridge', 'endo', 'denture', 'scaling', 'surgery', 'implant'],
+              datasets: [{
+                  label: '# of Votes',
+                  data: {{ month_income_chart_list | safe }},
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.7)',
+                      'rgba(54, 162, 235, 0.7)',
+                      'rgba(255, 206, 86, 0.7)',
+                      'rgba(75, 192, 192, 0.7)',
+                      'rgba(153, 102, 255, 0.7)',
+                      'rgba(255, 159, 64, 0.7)'
+                  ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+        plugins: {
+            legend: {
+                display: false
+            },
+        }
+    }
+});
+
+
+      const ctx_year_income_chart = document.getElementById('year_income_chart');
+      const year_income_chart = new Chart(ctx_year_income_chart, {
+          type: 'pie',
+          data: {
+              labels: ['examination', 'operative', 'crown', 'bridge', 'endo', 'denture', 'scaling', 'surgery', 'implant'],
+              datasets: [{
+                  label: '# of Votes',
+                  data: {{ year_income_chart_list | safe }},
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.7)',
+                      'rgba(54, 162, 235, 0.7)',
+                      'rgba(255, 206, 86, 0.7)',
+                      'rgba(75, 192, 192, 0.7)',
+                      'rgba(153, 102, 255, 0.7)',
+                      'rgba(255, 159, 64, 0.7)'
+                  ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+        plugins: {
+            legend: {
+                display: false
+            },
+        }
+    }
+});
+
+
+
+      const ctx_year_outcome_chart = document.getElementById('year_outcome_chart');
+      const year_outcome_chart = new Chart(ctx_year_outcome_chart, {
+          type: 'pie',
+          data: {
+              labels: ['Salary', 'Rent', 'Materials', 'Lab', 'Other'],
+              datasets: [{
+                  label: '# of Votes',
+                  data: {{ year_outcome_chart_list | safe }},
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.7)',
+                      'rgba(54, 162, 235, 0.7)',
+                      'rgba(255, 206, 86, 0.7)',
+                      'rgba(75, 192, 192, 0.7)',
+                      'rgba(153, 102, 255, 0.7)',
+                      'rgba(255, 159, 64, 0.7)'
+                  ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+        plugins: {
+            legend: {
+                display: false
+            },
+        }
+    }
+});
+
+
+
+      const ctx_month_outcome_chart = document.getElementById('month_outcome_chart');
+      const month_outcome_chart = new Chart(ctx_month_outcome_chart, {
+          type: 'pie',
+          data: {
+              labels: ['Salary', 'Rent', 'Materials', 'Lab', 'Other'],
+              datasets: [{
+                  label: '# of Votes',
+                  data: {{ month_outcome_chart_list | safe }},
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.7)',
+                      'rgba(54, 162, 235, 0.7)',
+                      'rgba(255, 206, 86, 0.7)',
+                      'rgba(75, 192, 192, 0.7)',
+                      'rgba(153, 102, 255, 0.7)',
+                      'rgba(255, 159, 64, 0.7)'
+                  ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+        plugins: {
+            legend: {
+                display: false
+            },
+        }
+    }
+});
+</script>
 </body>
 </html>
